--- a/project1/package.json
+++ b/project1/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "date-fns-tz": "^3.2.0",
     "dian-equipment-loan-system": "file:",
     "ionicons": "^7.4.0",
     "lucide-react": "^0.344.0",
@@ -42,6 +43,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-plugin-gh-pages": "^1.0.1"
   }
 }
